set categories view & detail view

--- a/AppStore/CategoriesView.xib
+++ b/AppStore/CategoriesView.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategoriesViewController" customModule="AppStore" customModuleProvider="target">
             <connections>
+                <outlet property="categoriesTableView" destination="lZ3-48-gqh" id="nDn-fu-WgU"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,14 +16,22 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Categorias" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DfS-H7-xm7">
-                    <rect key="frame" x="1" y="17" width="83" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lZ3-48-gqh">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="1iH-aS-w5r"/>
+                        <outlet property="delegate" destination="-1" id="Kki-oL-utp"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="lZ3-48-gqh" secondAttribute="bottom" id="QzT-pC-ZS3"/>
+                <constraint firstAttribute="trailing" secondItem="lZ3-48-gqh" secondAttribute="trailing" id="g1Z-B6-YJQ"/>
+                <constraint firstItem="lZ3-48-gqh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="iFD-Wm-qX6"/>
+                <constraint firstItem="lZ3-48-gqh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="mNO-Lr-Zgb"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
         </view>
